refactor: remove cardmarket ID references and update entity fields